# Klemr_TTS_audit

./: .gitignore  README.md  app.py  pyproject.toml
docs/: EVIDENCE_CAPTURE_SOP.md
fixtures/: README.md  resolutions_haus.csv
fixtures/raw/: Canceled order-2026-06-17-16_14.csv
klemr/: __init__.py
klemr/canonical/: __init__.py  charges.py  events.py  money.py  provenance.py
klemr/claims/: __init__.py  base.py  raf_1a.py  state.py
klemr/cli/: __init__.py
klemr/evidence/: __init__.py  packet.py
klemr/gates/: __init__.py  confidence.py
klemr/ingestion/: __init__.py  tiktok_files.py
klemr/ledger/: __init__.py  storage.py  verify.py
klemr/normalization/: __init__.py  entity.py  ids.py  pipeline.py  tiktok.py
klemr/reconciliation/: __init__.py  coverage.py  engine.py  finding.py
klemr/rules/: __init__.py  models.py  store.py
klemr/rules/data/: raf_auto_cancel_exemption.v2025-05-15.json
reference/: SKILL.md  build_packet.py  detect.py  policy_and_gates.md
tests/: conftest.py  test_canonical_models.py  test_claims.py  test_evidence.py  test_ingestion.py  test_ledger.py  test_reconciliation.py  test_rule_store.py
